fixed note to add food when loading and added visibility for responsive basket

--- a/style.css
+++ b/style.css
@@ -50,6 +50,29 @@ main {
         width: 100%;
         min-height: calc(100vh - 120px - 130px);
         display: flex;
+        @media (max-width: 1000px){
+        flex-direction: column-reverse;}
+
+        .cart {
+            height: 100px;
+            position: fixed;
+            top: 100px;
+            right: 60px;
+            z-index: 1000;
+            background-color: white;
+            border-radius: 50%;
+            padding: 10px;
+            border: rgb(160, 160, 160) solid 1px;
+            box-shadow: 0px 0px 10px rgba(88, 88, 88, 0.411);
+
+            @media (min-width: 1000px) {
+                display: none;
+            }
+        }
+        .cart:hover {
+            filter: drop-shadow(0 0 10px #e6b507);
+            cursor: pointer;
+        }
 
         .restaurant {
             width: calc(100% - 350px);
@@ -57,6 +80,9 @@ main {
             display: flex;
             flex-direction: column;
             gap: 20px;
+            @media (max-width: 1000px) {
+                width: 100%;
+            }
 
             .hero-img {
                 background-image: url(./assets/img/hero_bg.jpg);
@@ -106,91 +132,103 @@ main {
             min-height: calc(100vh - 80px - 130px);
             width: 350px;
             box-shadow: 0px 0px 10px rgba(88, 88, 88, 0.411);
-        }
-        .basket {
-            position: sticky;
-            top: 10px; 
-            width: 100%;         
-            padding: 20px;
-            display: flex;
-            flex-direction: column;
-            gap: 30px;
+            @media (max-width: 1000px){
+                width: 100%;
+                min-height: auto;
+                max-height: 100dvh;
+                padding: 60px;
+                position: fixed;
+                top: 0;
+                z-index: 100;
+                background-color: white;
+            }
 
-            .basket-content {
+
+            .basket {
+                position: sticky;
+                top: 10px;
+                width: 100%;
+                padding: 20px;
                 display: flex;
                 flex-direction: column;
+                gap: 30px;
 
-                .basket-item {
+                .basket-content {
                     display: flex;
                     flex-direction: column;
-                    gap: 20px;
-                    border: solid 1px rgba(211, 211, 211, 0.452);
-                    border-radius: 10px;
-                    padding: 10px;
 
-                    .bname-bprice {
+                    .basket-item {
                         display: flex;
-                        justify-content: space-between;
-                        font-weight: 600;
-                    }
+                        flex-direction: column;
+                        gap: 20px;
+                        border: solid 1px rgba(211, 211, 211, 0.452);
+                        border-radius: 10px;
+                        padding: 10px;
 
-                    .order-amount {
-                        display: flex;
-                        align-items: center;
-                        justify-content: space-between;
-                        gap: 10px;
-
-                        img:hover {
-                            filter: drop-shadow(0 0 10px #e6b507);
-                            cursor: pointer;
-                        }
-
-                        .add-substract {
-                            background-color: rgba(211, 211, 211, 0.158);
-                            width: 40%;
+                        .bname-bprice {
                             display: flex;
-                            justify-content: center;
-                            align-items: center;
-                            gap: 20px;
-                            padding: 5px;
-                            border-radius: 10px;
+                            justify-content: space-between;
+                            font-weight: 600;
                         }
-                        .delete {
-                            background-color: rgba(211, 211, 211, 0.288);
-                            pad: 5px;
-                            border-radius: 50%;
+
+                        .order-amount {
+                            display: flex;
+                            align-items: center;
+                            justify-content: space-between;
+                            gap: 10px;
+
+                            img:hover {
+                                filter: drop-shadow(0 0 10px #e6b507);
+                                cursor: pointer;
+                            }
+
+                            .add-substract {
+                                background-color: rgba(211, 211, 211, 0.158);
+                                width: 40%;
+                                display: flex;
+                                justify-content: center;
+                                align-items: center;
+                                gap: 20px;
+                                padding: 5px;
+                                border-radius: 10px;
+                            }
+                            .delete {
+                                background-color: rgba(211, 211, 211, 0.288);
+                                pad: 5px;
+                                border-radius: 50%;
+                            }
                         }
                     }
                 }
-            }
-            .costs {
-                display: flex;
-                justify-content: space-between;
-            }
-            .line {
-                height: 1px;
-                width: 100%;
-            }
-            .total-sum {
-                display: flex;
-                justify-content: space-between;
-                font-weight: bold;
-                font-size: 20px;
-            }
+                .costs {
+                    display: flex;
+                    justify-content: space-between;
+                }
+                .line {
+                    height: 1px;
+                    width: 100%;
+                }
+                .total-sum {
+                    display: flex;
+                    justify-content: space-between;
+                    font-weight: bold;
+                    font-size: 20px;
+                }
 
-            button {
-                background-color: #E6B507;
-                border: none;
-                border-radius: 20px;
-                color: white;
-                font-size: 26px;
-                padding: 10px;
-                margin-top: 20px;
-                font-weight: 600;
-            }
-            button:hover {
-                background-color: #ff8000;
-                cursor: pointer;;
+                button {
+                    background-color: #e6b507;
+                    border: none;
+                    border-radius: 20px;
+                    color: white;
+                    font-size: 26px;
+                    padding: 10px;
+                    margin-top: 20px;
+                    font-weight: 600;
+                }
+                button:hover {
+                    background-color: #ff8000;
+                    cursor: pointer;
+                }
             }
         }
     }
@@ -272,7 +310,7 @@ footer {
     }
 
     button {
-        background-color: #E6B507;
+        background-color: #e6b507;
         border: none;
         border-radius: 20px;
         color: white;
@@ -283,9 +321,8 @@ footer {
     }
     button:hover {
         background-color: #ff8000;
-        cursor: pointer;;
+        cursor: pointer;
     }
-
 }
 
 .d-flex {
